# Event-seating-client

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json  wedding_seating.db  wedding_seating_template.xlsx
api/: index.py
app/: __init__.py
app/api/: __init__.py  routes_admin.py  routes_guest.py  routes_public.py  ws.py
app/core/: config.py  db.py
app/models/: __init__.py  event.py  guest.py  table.py
app/schemas/: __init__.py  common.py  event.py  guest.py
app/services/: checkin_service.py  excel_service.py  firebase_client.py  qr_service.py  repositories.py  seating_service.py
app/utils/: responses.py  security.py
static/: styles.css
templates/: admin_panel.html  guest_portal.html
tests/: test_excel_validation.py  test_guest_lookup.py  test_seating_service.py
uploads/2/: original.xlsx
